# ib_rust_api

./: Cargo.toml  README.md
src/: api_parameter.rs  client_socket.rs  decoder.rs  lib.rs  order_decoder.rs
src/constants/: helper_constants.rs  incoming_message_constants.rs  min_server_version.rs  mod.rs
src/enums/: auction_strategy.rs  incoming_message_enum.rs  mod.rs  order_condition_type.rs  origin.rs  outgoing_messages.rs  position_type.rs  trigger_method.rs
src/errors/: client_errors.rs  mod.rs
src/examples/: account_info.rs  contract_details.rs  historical_data.rs  parameters.xml  place_order.rs  pnl.rs  real_time_bars.rs  scanner.rs  tick_by_tick.rs  tick_generic.rs
src/models/: account_summary.rs  bar.rs  combo_leg.rs  contract.rs  contract_details.rs  delta_neutral_contract.rs  mod.rs  order.rs  order_combo_leg.rs  order_data_item.rs  order_state.rs  order_status_message.rs  scan_data_item.rs  scanner_subscription.rs  soft_dollar_tier.rs  tag_value.rs  tick_last.rs
src/models/conditions/: execution_condition.rs  margin_condition.rs  mod.rs  percent_change_condition.rs  price_condition.rs  time_condition.rs  volume_condition.rs
src/traits/: mod.rs  order_condition.rs
